Geometry Nodes "Set Material" and Cuve to Mesh #92815

Closed
opened 2021-11-04 12:20:47 +01:00 by XanthorhixZ · 9 comments

System Information
Operating system: Windows 10 Professional
Graphics card: NVIDEA GeForce RTX 2060

Blender Version
Broken: 3.1 Alpha, dcdbaf89bd, master, 2021-10-29
Worked: (newest version of Blender that worked as expected)

Short description of error
Node "Set material" malefunction in cycles if curve to mesh is used...

Exact steps for others to reproduce the error
Using in geometry nodes an Bezier Curve as input geometry and an Bezier cycle object as input in Object Info as Profile on Curve to Mesh node, set a material you created on a other object and switch between cyccles and Eevee, in Eve you get the shadded modle, in cycles you get the standart material.

2021-11-04 12-12-34.mkv

**System Information** Operating system: Windows 10 Professional Graphics card: NVIDEA GeForce RTX 2060 **Blender Version** Broken: 3.1 Alpha, dcdbaf89bd11, master, 2021-10-29 Worked: (newest version of Blender that worked as expected) **Short description of error** Node "Set material" malefunction in cycles if curve to mesh is used... **Exact steps for others to reproduce the error** Using in geometry nodes an Bezier Curve as input geometry and an Bezier cycle object as input in Object Info as Profile on Curve to Mesh node, set a material you created on a other object and switch between cyccles and Eevee, in Eve you get the shadded modle, in cycles you get the standart material. [2021-11-04 12-12-34.mkv](https://archive.blender.org/developer/F11712756/2021-11-04_12-12-34.mkv)
Author

Added subscriber: @XanthorhixZ

Added subscriber: @XanthorhixZ
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm the issue. Next time, please provide the .blend for testing. That would save us some time.

wrong_material.blend

Thanks for the report. I can confirm the issue. Next time, please provide the .blend for testing. That would save us some time. [wrong_material.blend](https://archive.blender.org/developer/F11714599/wrong_material.blend)
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

This is caused by the non-conventional handling of evaluated data on curve objects. I posted a prototype fix in D13112 just to get a better understanding of the problem.

Currently, Cycles seems to get the mesh twice, once as part of the "real object" and once as an instance. This is because the data_eval mesh is assigned in BKE_displist_make_curveTypes but the mesh also remains in geometry_set_eval which is then turned into an instance in make_duplis_geometry_set_impl.
Another problem was that the material count wasn't retrieved correctly for the first object.

Would be nice if @HooglyBoogly has some insight on which mesh should be handled by cycles. The one in object.data_eval or the one that is passed as an instance.

This is caused by the non-conventional handling of evaluated data on curve objects. I posted a prototype fix in [D13112](https://archive.blender.org/developer/D13112) just to get a better understanding of the problem. Currently, Cycles seems to get the mesh twice, once as part of the "real object" and once as an instance. This is because the `data_eval` mesh is assigned in `BKE_displist_make_curveTypes` but the mesh also remains in `geometry_set_eval` which is then turned into an instance in `make_duplis_geometry_set_impl`. Another problem was that the material count wasn't retrieved correctly for the first object. Would be nice if @HooglyBoogly has some insight on which mesh should be handled by cycles. The one in `object.data_eval` or the one that is passed as an instance.

This issue was referenced by 3211c80a31

This issue was referenced by 3211c80a3110729a5ffaf064297ccb625850e8a1

This issue was referenced by 1bc655c5aa

This issue was referenced by 1bc655c5aa644c1b3b933f9e372ec5b5b504c0d5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-11-05 17:51:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92815
No description provided.